changed font, fixed line wrap

--- a/client/planets/styles.css
+++ b/client/planets/styles.css
@@ -1,3 +1,46 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:0a2f05fc615c0bb1f8727d0385ddaf8041cfb5a56b32a13a668ca5c8f6bc5c90
-size 670
+body {
+    margin: 0;
+    overflow: hidden;
+    background: black;
+    font-family: Arial, sans-serif;
+    position: relative;
+    height: 100vh;
+    font-family: 'IBM Plex Mono', monospace;
+    /* Full viewport height */
+}
+
+.floating-text {
+    position: absolute;
+    color: white;
+    font-size: 2vh;
+    /* font-weight: bold; */
+    text-shadow: 2px 2px 2px black;
+    width: 20%;
+    /* Control the width of the text container */
+    word-wrap: break-word;
+    font-family: "IBM Plex Mono", monospace;
+    /* Ensure text wraps within the width */
+}
+
+#left-text {
+    top: 20%;
+    /* Position from the top */
+    left: 5%;
+    /* Position from the left */
+    text-align: left;
+}
+
+#right-text {
+    top: 20%;
+    /* Position from the top */
+    right: 5%;
+    /* Position from the right */
+    text-align: right;
+}
+
+#gui-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 100;
+}
